Library/AXL(Library)/Dynamic Link/DAXDEV.h

typedef DWORD   PASCAL EXPORT funcAxmGetOptimizeDriveData(long lAxisNo, double dMinVel, double dVel, double dAccel, double  dDecel, WORD *wRangeData, WORD *wStartStopSpeedData, WORD *wObjectSpeedData, WORD *wAccelRate, WORD *wDecelRate);
typedef DWORD   PASCAL EXPORT funcAxlGetFirmwareVersion(long lBoardNo, PTCHAR szVersion);
extern funcAxmGetOptimizeDriveData              *AxmGetOptimizeDriveData;
extern funcAxlGetFirmwareVersion                *AxlGetFirmwareVersion;